Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.16-dev-122-g325d74c https://github.com/reactos/reactos/commit/325d74c30f30b4b6fb66c78d0ec7c7291fa516d3
Description
Build 0.4.16-dev-122-g325d74c. Bug spotted by 10_GOTO_10.
Steps to reproduce:
- Create (via Send to) or download a valid ZIP-archive
- Create a folder "Abc", move ZIP file to it, then place another "Xyz" folder inside
- Start RAPPS, open File -> Settings, click "Choose" button
- In "Browse for Folder" dialog try navigating to "Xyz" folder
Expected: "Abc" folder expands to "Xyz" folder
Observed: "Abc" folder fails to expand (nothing happens)
If you create a folder inside first, then move ZIP file inside, and then create more folders inside, the tree in "Browse for Folder" will expand, but the listing will be incomplete:
Attachments
Issue Links
- blocks
-
CORE-19751 [SHELL32] BrowseForFolder shall not accept .zip files as valid folders
-
- Resolved
-