[SHELL32] Fix BrowseForFolder expanding a folder containing a zip (#7585)

Commit 325d74c30f3 (PR #7437) introduced a side effect that made impossible
to expand a folder when it contained both a ZIP file and subfolders.

Fix this by ignoring the return value of BrFolder_InsertItem and free the
pidlTemp pointer explicitly in all cases.

CORE-19955 CORE-19751